--- a/frontend/career-bridge-mena-web/package.json
+++ b/frontend/career-bridge-mena-web/package.json
@@ -8,8 +8,10 @@
     "@testing-library/user-event": "^13.2.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-rating": "^2.0.5",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.3.0",
     "sass": "^1.50.0",
     "web-vitals": "^2.1.0"
   },
